--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "build-server": "tsc --project tsconfig.server.json"
   },
   "dependencies": {
+    "@coderline/alphatab": "github:coderline/alphatab",
+    "@types/mongodb": "^3.6.10",
     "husky": "^5.1.3",
+    "mongodb": "^3.6.5",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
