--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build-server": "tsc --project tsconfig.server.json"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/color-convert": "^2.0.0",
     "@types/mongodb": "^3.6.10",
     "husky": "^5.1.3",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@coderline/alphatab": "^1.2.1",
     "@storybook/addon-actions": "^6.2.2",
     "@storybook/addon-essentials": "^6.2.2",
     "@storybook/addon-links": "^6.2.2",
